# tauri_leptos_template

./: Cargo.toml
crate/backend-tauri/: Cargo.toml  tauri.conf.json
crate/backend-tauri/src/: lib.rs  main.rs  websocket.rs
crate/grsrpc/: Cargo.toml
crate/grsrpc/src/: client.rs  lib.rs  service.rs  task_set.rs
crate/shared/: Cargo.toml
crate/shared/src/: lib.rs
crate/ui/: Cargo.toml  Trunk.toml
crate/ui/src/: app.rs  main.rs  rpc_transport.rs  web_utils.rs
src/: app.rs
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
