
[workspace]
members = ["crate/backend-tauri", "crate/ui", "crate/shared"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
grsrpc = {version = "0.1.12", path = "../grsrpc/grsrpc", features=["macros", "multi_thread"]}
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
