[package]
name = "shared"
version = "0.1.0"
description = "Shared types between crates"
authors = ["you"]
edition.workspace = true
publish.workspace = true

[dependencies]
grsrpc.workspace = true
serde.workspace = true
async-trait.workspace = true
#grsrpc-macro = {path = "../../../grsrpc/grsrpc-macro"}