[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
ws_stream_wasm = "0.7"
futures-util = "0.3"
local-channel = "0.1"
futures-sink = "0.3"
async-trait.workspace = true

##### local dependencies
shared = {path = "../shared"}
grsrpc.workspace = true


